# faatra-web

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
faatra/: manage.py
faatra/faatra/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
faatra/faatra/templates/: base.html
faatra/home/: admin.py  apps.py  models.py  urls.py  views.py
faatra/home/migrations/: 0001_initial.py  0005_whoweare.py  (+11 more)
faatra/incriptions/: admin.py  apps.py  forms.py  models.py
faatra/links/: admin.py  apps.py  models.py  urls.py  views.py
faatra/news/: admin.py  apps.py  models.py  urls.py  views.py
faatra/partnership/: admin.py  apps.py  models.py
faatra/saloon/: admin.py  apps.py  models.py  urls.py  views.py
faatra/service/: admin.py  apps.py  models.py  urls.py  views.py
faatra/shared/: models.py  utils.py
faatra/training/: admin.py  apps.py  models.py  urls.py  views.py
nginx/sites-enabled/: django_project
src/: camara-full.html  camaras.html  capacitacion-full.html  capacitacion.html  capacitaciones-filter-page.html  carrousel.js  chambers.js  contacto.html  enlaces.html  index.html  index.js  links.js  news.js  noticias.html  quienes-somos.html  services.js  servicios.html  styles-by-google.css  styles.css  training.js
src/about/: contacto.html  quienes-somos.html
src/chambers/: camara-full.html  camaras.html  chambers.js
src/links/: enlaces.html
src/news/: news.js  noticias.html
src/services/: services.js  servicios.html
src/trainings/: capacitacion-full.html  capacitacion.html  capacitaciones-filter-page.html  training.js
(+71 files in other folders)
